PLT-1237: UI Alignment and Dropdown visibility fixes.

--- a/src/components/SecondaryTopNavBar/style.scss
+++ b/src/components/SecondaryTopNavBar/style.scss
@@ -1,5 +1,13 @@
 @import '../../assets/scss/colors';
 
+.fixed-secondary-nav {
+    position: fixed;
+    top: 2.8125rem;
+    left: 0;
+    width: 100%;
+    z-index: 998;
+}
+
 .buidling-switcher-container {
     border-bottom: 0.0625rem solid $primary-gray-200;
     background: $base-white;
