--- a/src/components/TopNav/styles.scss
+++ b/src/components/TopNav/styles.scss
@@ -1,10 +1,12 @@
 @import '../../assets/scss/colors';
 
 .top-nav-bar {
-    position: fixed;
     background: $primary-gray-900;
     height: 2.8125rem;
     width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 999;
 }
 
 .logo-style {
